modify test and add int4 test

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,13 @@
-all: test.ll
+all: test_fixed4.ll test_int4.ll
 
-test.ll:
-	../llvm7.0.0/build/bin/clang++ -S -emit-llvm test.cpp
+clean:
+	@echo "** remove ll files **"
+	rm *.ll
+
+test_fixed4.ll:
+	@echo "** test for fixed4 **"
+	../llvm7.0.0/build/bin/clang++ -S -emit-llvm test_fixed4.cpp
+
+test_int4.ll:
+	@echo "** test for test4 **"
+	../llvm7.0.0/build/bin/clang++ -S -emit-llvm test_int4.cpp
