--- a/test/Makefile
+++ b/test/Makefile
@@ -1,12 +1,16 @@
-all: test_fixed4.ll test_int4.ll test_uint4.ll
+all: test_fixed4.ll test_fixed8.ll test_int4.ll test_uint4.ll
 
 clean:
-	@echo "** remove ll files **"
+	@echo "** remove generated files **"
 	rm *.ll *~
 
 test_fixed4.ll:
 	@echo "** test for fixed4 **"
 	../llvm7.0.0/build/bin/clang++ -S -emit-llvm test_fixed4.cpp
+
+test_fixed8.ll:
+	@echo "** test for fixed8 **"
+	../llvm7.0.0/build/bin/clang++ -S -emit-llvm test_fixed8.cpp
 
 test_int4.ll:
 	@echo "** test for int4 **"
